@@ -3,6 +3,8 @@ package com.palmergames.bukkit.util;
 import org.json.simple.JSONObject;
 import org.json.simple.JSONValue;
 
+import com.palmergames.bukkit.towny.exceptions.MojangException;
+
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -18,7 +20,7 @@ public class MojangAPI {
 
 	static final Pattern uuidCreator = Pattern.compile("(\\w{8})(\\w{4})(\\w{4})(\\w{4})(\\w{12})");
 
-	static JSONObject send(String url) throws IOException {
+	static JSONObject send(String url) throws IOException, MojangException {
 		return (JSONObject) JSONValue.parse(sendGetRequest(url));
 	}
 
@@ -26,7 +28,7 @@ public class MojangAPI {
 		return undashed.replaceAll(uuidCreator.pattern(), "$1-$2-$3-$4-$5");
 	}
 
-	private static String sendGetRequest(String URL) throws IOException {
+	private static String sendGetRequest(String URL) throws IOException, MojangException {
 		StringBuilder builder = new StringBuilder();
 
 		try {
@@ -34,7 +36,7 @@ public class MojangAPI {
 			connection.setRequestMethod("GET");
 
 			if (connection.getResponseCode() == 204)
-				throw new IOException();
+				throw new MojangException();
 		
 			BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
 			String response;
@@ -42,6 +44,8 @@ public class MojangAPI {
 				builder.append(response);
 			}
 			reader.close();
+		} catch (MojangException e2) {
+			throw new MojangException();
 		} catch (IOException e1) {
 			throw new IOException();
 		} catch (Exception e) {
